--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@react-three/drei": "^9.80.2",
+    "@react-three/fiber": "^8.13.4",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "three": "^0.150.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
