--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.80.2",
     "@react-three/fiber": "^8.13.4",
     "framer-motion": "^12.12.1",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
