--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.80.2",
     "@react-three/fiber": "^8.13.4",
+    "flowbite": "^3.1.2",
     "framer-motion": "^12.12.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.511.0",
